2016-12-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (kb_duplicate, init_host_kb): Adjust kb_item_add_str()
	calls.

2016-12-13  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/openvassd.c (main): Terminate immediately with a non-zero exit
	code if KB flushing fails.

2016-12-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (comm_wait_order): Zero str buffer. Fixes possible infinite
	loop.

2016-12-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginscheduler.c: Removed unneeded include "nvti.h".

2016-12-08  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Set hardening and optimization flags only in
	"Release" build type to avoid compiler optimization interfering with
	debugging in "Debug" build type. Stop setting GPGME_C_FLAGS twice.

2016-12-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (comm_init): Don't write gibberish content to log file when
	reading the OTP version.

2016-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Require libgvm_base.

	* src/CMakeLists.txt: Link gvmlibs-base.

	* src/openvassd.c, src/sighand.c: Fix include path for pidfile.h.

2016-12-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Make it possible to build openvas-scanner on FreeBSD.

	* src/CMakeLists.txt: Explicitly link against execinfo on FreeBSD.

2016-11-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (reload_openvassd): Reinitialize logging on scanner
	reload.

2016-11-15  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/ntp.c, src/pluginscheduler.c: Fix typos in comments.

2016-11-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post branch version bump.

	* CMakeLists.txt: Set to version to 5.2.0 and beta status.

2016-11-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.1.1.
