@@ -1,3 +1,9 @@
+2016-12-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/comm.c, src/nasl_plugins.c, src/ntp.c, src/pluginlaunch.c:
+	Add missing includes due to cleaning header files in the
+	libraries.
+
 2016-12-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	* src/attack.c (kb_duplicate, init_host_kb): Adjust kb_item_add_str()
